UGUI  Atlas RGBA

--- a/_posts/2021-07-08-unity-UI.md
+++ b/_posts/2021-07-08-unity-UI.md
@@ -64,7 +64,7 @@ private bool IsUI() {
 ### 5.UGUI合批规则
 
 ```
-遍历UI->根据深度值、材质、Texture、Render Order生成数组->数组排序->剔除深度值为-1的组件->相邻元素判断合批
+流程: 遍历UI->根据深度值、材质、Texture、Render Order生成数组->数组排序->剔除深度值为-1的组件->相邻元素判断合批
 (Text组件根据字体Render进行判断是否合批)
 Mask:
 (不同Mask的子物体可合批)(会绘制被裁剪部分)
@@ -72,5 +72,26 @@ Mask:
 (会产生2DC[添加、还原模板缓存分别一次][根据模板缓存控制像素显示])
 RectMask2D:
 (不同Mask的子物体不能合批)(被裁剪部分不会被绘制)
+
+(z轴坐标被改变、旋转到不在同一平面会打断合批 [同一平面进行合批] {处于同一父物体下不会出现此问题})
 ```
 
+### 6.UGUI 优化
+
+1.ui组件显隐: CanvasGroup控制一组、 Canvas Renderer控制一个
+
+2.Best Fit: 每一种不同大小、不同格式的字体, 都会存到图集内占用内存
+
+### 7.图集
+
+子图集: Variant(调整scale,可用于适应不同分辨率)
+
+加载图片: atlas.GetSprite("name")
+
+打图集: (小图, 同一模块图进同一图集, 内存常驻一个公共图集)
+
+### 8.关于颜色通道
+
+三原色: RGB + Alpha  
+
+RGBA32 (每通道8位) RGBA16(每通道4位)
