--- a/_posts/2021-07-08-unity-UI.md
+++ b/_posts/2021-07-08-unity-UI.md
@@ -90,8 +90,52 @@ RectMask2D:
 
 打图集: (小图, 同一模块图进同一图集, 内存常驻一个公共图集)
 
+**动态图集**: UnityRuntimeSpriteSheetsGenerator
+
 ### 8.关于颜色通道
 
 三原色: RGB + Alpha  
 
 RGBA32 (每通道8位) RGBA16(每通道4位)
+
+### 9.图片压缩
+
+jpg 有损压缩不透明
+
+png 无损压缩有透明
+
+导入后被Unity转化为纹理格式(可被GPU读取的格式)
+
+(不同的GPU支持的纹理格式也会不同[**都支持RGBA**])
+
+##### 占用内存: 
+
+纹理大小(1024 x 1024) x 字节数(16bit / 8 = 2字节) = 2M
+
+ASTC 像素块 4x4(16像素) block   (1block = 16字节) 
+
+(1block用4x4的像素块 == 16个字节用16像素 == 每个像素用一个字节)
+
+##### 选择格式:
+
+RGB、RGBA: 无损压缩
+
+Android: 
+
+1.ETC: 有损压缩   ETC1(4x2像素块) ETC2(4x4像素块 支持A通道) 
+
+2.Crunched: 首次压缩后, Unity会二次压缩 (缺点: 压缩时间狠长)
+
+iOS:
+
+1.PVRTC  2.ASTC
+
+压缩格式各要求: 边高4的倍数, POT(power of two 2次幂), 正方形, 
+
+[大图不符合要求, 可以打一张图集解决]
+
+##### 通道分离: 
+
+RGBA-4M  ==  ETC1-0.5M + A-1M  -> 1.5M
+
+### 10.
